test-suite/output/bug_4337.out
File "./output/bug_4337.v", line 4, characters 35-36:
Error:
In environment
Foo : list var -> term -> Prop
l : list var
x : var
The term "x" has type "var" while it is expected to have type "term".

